# beautifulCppVisitorPattern

./: .gitignore  CMakeLists.txt  README.md  VisitorWithDataInAndOut.cpp  build.sh
src/: main.cpp
src/visitableLibrary/: AbstractGeometricElement.cpp  AbstractGeometricElement.h  Cube.cpp  Cube.h  GeometricElement.cpp  GeometricElement.h  GeometricElementVisitorInterface.cpp  GeometricElementVisitorInterface.h  Rectangle.cpp  Rectangle.h  TenDimensionalElement.cpp  TenDimensionalElement.h
src/visitor/: NDimensionalVolumeCalculator.cpp  NDimensionalVolumeCalculator.h
