cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project (BeautifulModernVisitorPatternWithData CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")
# include_directories(.)
set (SOURCE_LIST ./BeautifulModernVisitorPatternWithData.cpp )
add_executable(BeautifulModernVisitorPatternWithData ${SOURCE_LIST})
